WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314795
AudioVideoRendererRemote's TimeProgressEstimator incorrectly set m_effectiveRate
https://bugs.webkit.org/show_bug.cgi?id=314795
Summary
AudioVideoRendererRemote's TimeProgressEstimator incorrectly set m_effectiveRate
Jean-Yves Avenard [:jya]
Reported
2026-05-14 00:13:02 PDT
When the rate had already been set to 0 and a new non rate was set, the m_effectiveRate wasn't set to the new value ; causing the next call to AudioVideoRendererRemote::currentTime() to return a stale value Additionally, it caused additional query of the AVSampleBufferVideoRenderer playback statistics which has a high CPU usage.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-14 00:13:08 PDT
<
rdar://problem/177046564
>
Jean-Yves Avenard [:jya]
Comment 2
2026-05-14 00:21:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64909
EWS
Comment 3
2026-05-14 08:39:44 PDT
Committed
313249@main
(5a1e30384382): <
https://commits.webkit.org/313249@main
> Reviewed commits have been landed. Closing PR #64909 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug